# 03-tartine

./: .envrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE_kubernetes  go.mod  go.sum
cmd/tartine-giphy/: go.mod  go.sum  main.go
cmd/tartine-name/: go.mod  main.go
pkg/core/: go.mod  go.sum
pkg/core/httpd/: BUILD.bazel  gin.go
pkg/core/logger/: BUILD.bazel  logrus.go
