load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logrus.go"],
    importpath = "github.com/orphaner/03-tartine/pkg/core/logger",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/core/vendor/github.com/sirupsen/logrus:go_default_library",
        "//pkg/core/vendor/github.com/spf13/pflag:go_default_library",
    ],
)
